Implementada la UI para el Metodo Post
