# src/AppForSEII2526.API/DTOs/RentalItemDTO.cs
@@ -1,5 +1,6 @@
 ﻿
 
+
 namespace AppForSEII2526.API.DTOs
 {
     public class RentalItemDTO
@@ -20,6 +21,15 @@ namespace AppForSEII2526.API.DTOs
                 Car = car;
                 RentingPrice = rentingPrice;
             }
+            public RentalItemDTO(int carId, int quantity, int rentalId, int rentingPrice, string car,string manufacturer)
+            {
+                CarId = carId;
+                Quantity = quantity;
+                RentalId = rentalId;
+                Car = car;
+                RentingPrice = rentingPrice;
+                Manufacturer = manufacturer;
+            }
         public int CarId { get; set; }
             [Required]
             [Range(1, 100, ErrorMessage = "Minimum 1, Maximum 100")]
@@ -36,12 +46,13 @@ namespace AppForSEII2526.API.DTOs
                    Quantity == dTO.Quantity &&
                    RentalId == dTO.RentalId &&
                    RentingPrice == dTO.RentingPrice &&
-                   Car == dTO.Car;
+                   Car == dTO.Car &&
+                   Manufacturer == dTO.Manufacturer;
         }
 
         public override int GetHashCode()
         {
-            return HashCode.Combine(CarId, Quantity, RentalId, RentingPrice, Car);
+            return HashCode.Combine(CarId, Quantity, RentalId, RentingPrice, Car, Manufacturer);
         }
     }
     }
